--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,7 @@
+MINNE_LIVE_PUBLISH_HOST=rtmp://localhost
+MINNE_LIVE_PUBLISH_PORT=1935
+MINNE_LIVE_PLAY_HOST=http://localhost
+MINNE_LIVE_PLAY_PORT=8420
 MINNE_LIVE_STREAM_KEY=stream
 MINNE_LIVE_HTTP_PORT=8080
 MINNE_LIVE_AUTH_SECRET=secret
