--- a/client-web/package.json
+++ b/client-web/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "query-string": "^6.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
     "video.js": "^7.7.5"
   },
   "devDependencies": {
