--- a/client-web/package.json
+++ b/client-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "dashjs": "^2.9.3",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
@@ -18,7 +19,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
-    "video.js": "^7.7.5"
+    "video.js": "^7.7.5",
+    "videojs-contrib-dash": "^2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
