--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "node-media-server": "^2.1.6"
