Updates node to 18 & dependencies to latest compatible

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,11 @@ MINNE_LIVE_SLACK_CLIENT_SECRET=asdf2ef09dsf
 MINNE_LIVE_MONGO_URI=mongodb://127.0.0.1/minnecrapolis-live
 MINNE_LIVE_JWT_SECRET=secret
 MINNE_LIVE_CHANNEL_ID=secret
+
+SPOTIFY_SCOPE=user-read-playback-state+user-modify-playback-state
+SPOTIFY_REDIRECT_URI=https://fart.local
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_CODE=
+SPOTIFY_ACCESS_TOKEN=
+SPOTIFY_REFRESH_TOKEN=
