Added Slack interactions

--- a/client-web/.env.example
+++ b/client-web/.env.example
@@ -1,2 +1,2 @@
-MINNE_LIVE_API_HOST=http://localhost:8080
-MINNE_LIVE_SLACK_REDIRECT=http://localhost:8081/auth/slack
+MINNE_LIVE_API_HOST=https://live.minnecrapol.is
+MINNE_LIVE_SLACK_REDIRECT=https://live.minnecrapol.is/auth/slack
