--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server for live.minnecrapol.is",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development nodemon ./src/index.js",
+    "dev": "export NODE_NO_WARNINGS=1 && NODE_ENV=development nodemon ./src/index.js",
     "start": "NODE_ENV=production node ./src/index.js"
   },
   "dependencies": {
