Spotiy integration working

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,18 +1,20 @@
-MINNE_LIVE_PUBLISH_HOST=rtmp://localhost
-MINNE_LIVE_PUBLISH_PORT=1935
-MINNE_LIVE_PLAY_HOST=http://localhost
-MINNE_LIVE_PLAY_PORT=8420
-MINNE_LIVE_PLAY_NEEDS_PORT=1
-MINNE_LIVE_STREAM_KEY=stream
-MINNE_LIVE_HTTP_PORT=8080
-MINNE_LIVE_AUTH_SECRET=secret
-MINNE_LIVE_SLACK_TOKEN=xoxp-123
-MINNE_LIVE_SLACK_BOT_TOKEN=xoxb-123
-MINNE_LIVE_SLACK_CLIENT_ID=123456
-MINNE_LIVE_SLACK_CLIENT_SECRET=asdf2ef09dsf
-MINNE_LIVE_MONGO_URI=mongodb://127.0.0.1/minnecrapolis-live
-MINNE_LIVE_JWT_SECRET=secret
-MINNE_LIVE_CHANNEL_ID=secret
+MINNE_STREAM_KEY=
+MINNE_AUTH_SECRET=
+MINNE_LIVE_PUBLISH_HOST=
+MINNE_LIVE_PUBLISH_PORT=
+MINNE_LIVE_PLAY_HOST=
+MINNE_LIVE_PLAY_PORT=
+MINNE_LIVE_STREAM_KEY=
+MINNE_LIVE_HTTP_PORT=
+MINNE_LIVE_AUTH_SECRET=
+MINNE_LIVE_SLACK_TOKEN=
+MINNE_LIVE_SLACK_BOT_TOKEN=
+MINNE_LIVE_SLACK_CLIENT_ID=
+MINNE_LIVE_SLACK_CLIENT_SECRET=
+MINNE_LIVE_MONGO_URI=
+MINNE_LIVE_JWT_SECRET=
+MINNE_LIVE_CHANNEL_ID=
+STREAM_URL=
 
 SPOTIFY_SCOPE=user-read-playback-state+user-modify-playback-state
 SPOTIFY_REDIRECT_URI=https://fart.local
@@ -21,3 +23,5 @@ SPOTIFY_CLIENT_SECRET=
 SPOTIFY_CLIENT_CODE=
 SPOTIFY_ACCESS_TOKEN=
 SPOTIFY_REFRESH_TOKEN=
+
+NODE_NO_WARNINGS=1
